# AllSkyCam4OLEODL

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml
AllSkyCam4OLEODL/: __init__.py  api.py  constants.py  gui.py  image_processing.py  input_checks.py  link_budget.py  printer.py
data/references/gain0/: hot_1000000.tiff  hot_2000000.tiff  hot_3000000.tiff  hot_400000.tiff  hot_500000.tiff
data/references/gain0/LowAperture/: hot_1000000.tiff  hot_2000000.tiff  hot_3000000.tiff  hot_500000.tiff
data/references/gain1/: hot_100000.tiff  hot_150000.tiff  hot_20000.tiff  hot_200000.tiff  hot_250000.tiff  hot_30000.tiff  hot_300000.tiff  hot_40000.tiff  hot_50000.tiff  hot_75000.tiff
data/references/gain1/LowAperture/: hot_100000.tiff  hot_200000.tiff  hot_300000.tiff  hot_400000.tiff  hot_50000.tiff  hot_500000.tiff  hot_75000.tiff
docs/: AllSkyCam4OLEODL.rst  modules.rst  requirements.txt
docs/source/: conf.py  index.rst
