[tool.poetry]
name = "allskycam4oleodl"
version = "0.1.0"
description = "Tracking software for OLEODL using Allied Vision cameras. Developed alongside DLR-OP-IKN."
authors = ["Iker Aldasoro <ikeraldasorot@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ikerald/AllSkyCam4OLEODL"
repository = "https://github.com/Ikerald/AllSkyCam4OLEODL"
keywords = ["OLEODL", "AllSky"]
packages = [{include = "AllSkyCam4OLEODL"}]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
vmbpy = {url = "https://github.com/alliedvision/VmbPy/releases/download/v1.0.4/vmbpy-1.0.4-py3-none-any.whl"}
numpy = "^2.1.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
mplcursors = "^0.5.3"
scipy = "^1.14.0"
tk = "^0.1.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
