[tool.poetry]
name = "allskycam4oleodl"
version = "0.2.0"
description = "Tracking software for OLEODL using Allied Vision cameras. Developed alongside DLR-OP-IKN."
authors = ["Iker Aldasoro <ikeraldasorot@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ikerald/AllSkyCam4OLEODL"
repository = "https://github.com/Ikerald/AllSkyCam4OLEODL"
keywords = ["OLEODL", "AllSky"]
packages = [{include = "AllSkyCam4OLEODL"}]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy
opencv-python
matplotlib
mplcursors
scipy
tk
pytz


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
